# pythonapi

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  taskfile.yaml
app/: main.py  main_tests.py
